php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49990 SNMP3 warning message about security level printed twice
Submitted: 2009-10-25 11:47 UTC Modified: 2009-10-25 20:17 UTC
From: olivier at oxeva dot fr Assigned:
Status: Closed Package: SNMP related
PHP Version: 5.*, 6 (2009-10-25) OS: *
Private report: No CVE-ID: None
 [2009-10-25 11:47 UTC] olivier at oxeva dot fr
Description:
------------
Warning message when using (incorrectly) snmp3_get is printed twice.
Same bug appears with all snmp3_* functions.

(You don't need a working SNMP server to test this bug).


Reproduce code:
---------------
<?php

// You don't need a working SNMP server to test this bug
snmp3_get('127.0.0.1', 'public', 'a', 'b', 'c', 'd', 'e', '.1.3.6.1.2.1.1.1.0');


Expected result:
----------------
Warning: snmp3_get(): Invalid security level: a in %s on line 4


Actual result:
--------------
Warning: snmp3_get(): Invalid security level: a in %s on line 4
Warning: snmp3_get(): Invalid security level: a in %s on line 4


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-10-25 20:17 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=289918
Log: - Fixed bug #49990 (SNMP3 warning message about security level printed twice).
 [2009-10-25 20:17 UTC] jani@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC