- Fixed bug #49990 (SNMP3 warning message about security level printed twice).